2000-06-23  Michael Meeks  <michael@helixcode.com>

	* container-io.c (sample_container_load): use STORAGE_TYPE ("efs")
	define to help vfs switch. (sample_container_save): ditto.

2000-05-26  Dan Winship  <danw@helixcode.com>

	* component.c (load_stream_cb): 
	* component-io.c (component_load, component_save):
	Update for Bonobo_PersistStream_{load,save} changes.

2000-05-22  ERDI Gergo  <cactus@cactus.rulez.org>

	* Makefile.am (sample_container_SOURCES): Add the new sources

	* container-filesel.[ch]: Separated file request GUI (idea from
	the original `sample-container'

	* component-io.[ch]: separated component-level IO from other
	component operations

	* container-io.h: Use consts whereever possible

	* container.c (final_setup): Removed a compile-time warning, and
	renamed `a' to something more informative

2000-05-05  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_exit): kill redundant forward definitions.

2000-05-04  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_create): return the app.
	(final_setup): load files. (main): use popt for args.

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* container-menu.c: update shortcut to kill clash.

2000-04-24  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello-container-print.[ch]: Printing 

	* hello-container.h (hello_app_exit): New function to allow
	graceful exit from any point of the program

	* hello-container-menu.c (hello_app_create_menus): Create a
	default menu for the container (application-specific menu)

	* hello-container.c (hello_app_create): Create a menu for the
	components to use
	
	* hello-component.c (component_user_context_cb): Context menu
	implementation
	(component_print): Render a component to a print canvas

2000-04-23  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello-container.c: Added compile-time option to use
	OAF instead of GOAD
